[tool.poetry]
name = "pyipasnhistory"
version = "2.1.3"
description = "Python client for IP ASN History"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL"

repository = "https://github.com/lookyloo/PyLookyloo"
documentation = "https://pylookyloo.readthedocs.io/en/latest/"

readme = "README.md"

classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
    'Topic :: Internet',
]

[tool.poetry.scripts]
ipasnhistory = "pyipasnhistory:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
Sphinx = { version = "^8.1.3", python = ">=3.10", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"

[tool.poetry.extras]
docs = ["Sphinx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
