[project]
name = "pyipasnhistory"
version = "2.1.5"
description = "Python client for IP ASN History"
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "AGPL"
readme = "README.md"
requires-python = ">=3.9"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.4)"
]

[project.urls]
repository = "https://github.com/D4-project/pyipasnhistory"
documentation = "https://pyipasnhistory.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
ipasnhistory = "pyipasnhistory:main"

[project.optional-dependencies]
docs = ["Sphinx (>=8.2.3) ; python_version >= \"3.11\""]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
